# wynn-gathering-map

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  static_export.py
backend/app/api/routes/: dev_gathering_nodes.py  gathering_nodes.py  node_clusters.py  territories.py
backend/app/core/: config.py
backend/app/models/: gathering_node.py  node_cluster.py  territory.py
backend/app/services/: cache.py  node_clustering.py  territory_service.py  wynncraft_client.py
backend/app/tests/: test_cache.py  test_cluster_routes.py  test_dev_gathering_nodes.py  test_gathering_nodes.py  test_node_clustering.py  test_territories.py  test_territory_routes.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: node-clusters.json  territories.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: config.ts  editedGatheringNodesApi.ts  gatheringNodesApi.ts  nodeClustersApi.ts  scannedNodesApi.ts  territoriesApi.ts
frontend/src/components/: ClusterControlPanel.tsx  ClusterResultsPanel.tsx  ClusterTooltip.tsx  DebugCoordinatePanel.tsx  GatheringNodeFilterPanel.tsx  GatheringNodeTooltip.tsx  ScannedNodeDevPanel.tsx  TerritoryTooltip.tsx
frontend/src/map/: ClusterOutlineOverlay.tsx  GatheringNodeOverlay.tsx  MapCanvas.tsx  TerritoryOverlay.tsx  clusterAnalysis.ts  coordinates.ts  resourceStyles.ts  scannedNodeComparison.ts  useMapViewport.ts
(+12 files in other folders)
