[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wynn-gathering-map-backend"
version = "0.1.0"
description = "FastAPI backend for Wynncraft gathering node map data."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "scipy>=1.11.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
